--- a/index.html
+++ b/index.html
@@ -10,38 +10,24 @@
 	<td>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RCeAk8aWq4g?si=BZVn26x7NqfbZnUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<td>
-	<td>1</td>
-</tr>
-<tr>
 	<td>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/-BRwVMzew7s?si=pfYnanV5cY-Nrg39" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<td>
-	<td>2</td>
 </tr>
 <tr>
 	<td>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/RCeAk8aWq4g?si=BZVn26x7NqfbZnUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<td>
-	<td>3</td>
-</tr>
-<tr>
 	<td>
 <iframe width="560" height="315" src="https://drive.google.com/file/d/1LwEi7WlUsv3atXumtDlq_9drgc7Rcv84/view?usp=drive_link" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
 	<td>
+</tr>
+<tr>
 	<td><a href="https://drive.google.com/file/d/1LwEi7WlUsv3atXumtDlq_9drgc7Rcv84/view?usp=drive_link">Click here to watch the video</a></td>
+	<td>
+	</td>
 </tr>
-<tr>
-	<td>
-<iframe width="560" height="315" src="https://drive.google.com/file/d/1LwEi7WlUsv3atXumtDlq_9drgc7Rcv84/view?usp=sharing" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	<td>
-	<td>first</td>
-</tr>
-<tr>
-	<td>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/RCeAk8aWq4g?si=BZVn26x7NqfbZnUM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-	<td>
-	<td>first</td>
-</tr>
+
 </tbody>
 </table>
 
@@ -52,6 +38,9 @@
 		margin-top:20px;
 		text-align:center;
 		}
+	table{
+	
+	}
 	td {
 	padding:30px
 	}
